# SerialTerminal

./: .gitignore  CMakeLists.txt  build.sh
src/: main.cpp
src/serial/: SerialPorts.cpp  SerialPorts.h
